Differentiate AppIcons by deployment Optional Health/Smoke Tests from Config

--- a/apps/ios/Peer2Park/Peer2Park/Info.plist
+++ b/apps/ios/Peer2Park/Peer2Park/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>ASSETCATALOG_COMPILER_APPICON_NAME</key>
+	<string>$(ASSETCATALOG_COMPILER_APPICON_NAME)</string>
+	<key>API_TEST_ENABLED</key>
+	<string>$(API_TEST_ENABLED)</string>
 	<key>API_BASE_URL</key>
 	<string>$(SRCROOT)/apps/ios/Peer2Park/Info.plist
 </string>
