--- a/apps/ios/Peer2Park/Beta.xcconfig
+++ b/apps/ios/Peer2Park/Beta.xcconfig
@@ -11,3 +11,4 @@
 PRODUCT_BUNDLE_IDENTIFIER = com.peer2park.app.beta
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = BETA
 API_BASE_URL = https://beta.api.peer2park.com
+ASSETCATALOG_COMPILER_APPICON_NAME = beta-icon
