--- a/apps/ios/Peer2Park/Debug 2.xcconfig
+++ b/apps/ios/Peer2Park/Debug 2.xcconfig
@@ -1,6 +1,6 @@
 //
 //  Debug.xcconfig
-//
+//  
 //
 //  Created by Trent S on 10/6/25.
 //
@@ -11,6 +11,4 @@
 PRODUCT_BUNDLE_IDENTIFIER = com.peer2park.app.dev
 SWIFT_ACTIVE_COMPILATION_CONDITIONS = DEBUG
 API_BASE_URL = https://dev.api.peer2park.local
-SWIFT_OPTIMIZATION_LEVEL = -Onone
-API_TEST_ENABLED = NO //toggle to allow smoke/health tests for API_BASE_URL
-ASSETCATALOG_COMPILER_APPICON_NAME = debug-icon
+ENABLE_API_TESTS = true
