--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p tsconfig.json && sam build",
+    "deploy": "sam deploy --guided",
+    "clean": "rimraf ./dist .aws-sam",
     "start": "node dist/index.js",
     "typecheck": "tsc --noEmit"
   },
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.7.1",
+    "rimraf": "^6.0.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
