--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Peer2Park/Peer2Park#readme",
   "dependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.921.0",
     "@aws-sdk/client-dynamodb": "^3.907.0",
     "@aws-sdk/client-s3": "^3.907.0",
     "@aws-sdk/lib-dynamodb": "^3.907.0",
