--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,15 +1,19 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "commonjs",
-    "moduleResolution": "node",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "verbatimModuleSyntax": true,
     "strict": true,
-    "esModuleInterop": true,
+    "esModuleInterop": false,
+    "types": ["node"],
     "skipLibCheck": true,
     "rootDir": "src",
     "outDir": "dist",
     "sourceMap": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true,
+    "noUncheckedIndexedAccess": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["dist", "node_modules"]
