--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,19 +1,16 @@
 {
   "compilerOptions": {
     "target": "ES2022",
-    "module": "NodeNext",
-    "moduleResolution": "nodenext",
-    "verbatimModuleSyntax": true,
+    "module": "commonjs",
+    "moduleResolution": "node",
     "strict": true,
-    "esModuleInterop": false,
+    "esModuleInterop": true,
     "types": ["node"],
     "skipLibCheck": true,
     "rootDir": "src",
     "outDir": "dist",
     "sourceMap": true,
     "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
-    "noUncheckedIndexedAccess": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["dist", "node_modules"]
